<resources>
    <string name="app_name">SpaceX Fan</string>

    <string name="error_message">Error!</string>
    <string name="error_time_out">Time Out!</string>
    <string name="error_try_again">Try Again!</string>
    <string name="error_eofe">Flow Error!</string>
    <string name="error_unknown">Unknown Error!</string>
    <string name="error_window_manager">Window Manager Error!</string>
    <string name="error_no_internet_connection">Not Internet Connection!</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_rockets">Rockets</string>
    <string name="menu_favorite">Favorite Rockets</string>
    <string name="menu_detail">Rocket Detail</string>
    <string name="menu_login">Login Fragment</string>


    <string name="fill_all_fields">Tüm Alanları Doldurunuz!</string>
    <string name="empty_list">Liste Boş Roketleri Görmek İçin Tıklayınız!</string>
    <string name="must_login_or_register">Bu Sayfaya Erişmek İçin Üye Olmalısınız!</string>
    <string name="login_register">Giriş Yap/Kayıt Ol</string>
    <string name="login">Giriş Yap</string>
    <string name="register">Kayıt Ol</string>
    <string name="e_mail_adress">E-posta adresi</string>
    <string name="password">Şifre</string>
    <string name="or_register">Ya da buradan Kayıt Ol!</string>
    <string name="or_login">Ya da buradan giriş Yap!</string>
    <string name="try_again">Tekrar Dene!</string>
</resources>